style the horizontal break line

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,4 +7,10 @@ body{
     background-repeat: none;
     background-size: cover;
 }
+hr{
+    width: 80%;
+    display:flex;
+    justify-content: center;
+    color: hotpink;
+}
 
