add the footer and style it

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,9 @@ hr{
 .cart{
     display: none;
 }
-.row{
+.footer{
+    background-color: rgb(109, 18, 18);
+    justify-content: center;
     
 }
 
