add contructor and prototype on the script file

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,16 +14,17 @@ hr{
     color: hotpink;
 }
 #myform {
-    display: none;
+    /* display: none; */
     color: aqua;
 }
 .imagesection>div>img{
     height: 250px;
     width: 250px;
-    border-radius: 80%;
+    border-radius: 50%;
     border: 2px solid rgb(69, 192, 201);
     box-shadow: 0px 2px 2px 3px rgb(179, 62, 8);
-    justify-content: space-between;
+    /* justify-content: space-around; */
+    margin: 20px;
     
 
 }
@@ -34,5 +35,9 @@ hr{
     background-color: rgb(109, 18, 18);
     justify-content: center;
     
+}
+.imagesection{
+    justify-content: space-around;
+
 }
 
