--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body{
 
 }
 .container{
-    background-image: url(/images/image\ 6.jpeg);
+    background-image: url('/images/background.jpeg');
     background-repeat: none;
     background-size: cover;
 }
