--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,27 @@
-body{
+body {
     background-color: rgb(1, 22, 1);
 
 }
-.container{
-    
+
+.container {
+    background-image: url('./images/image6.jpeg');
     background-repeat: none;
     background-size: cover;
 }
-hr{
+
+hr {
     width: 80%;
-    display:flex;
+    display: flex;
     justify-content: center;
     color: hotpink;
 }
+
 #myform {
     display: none;
     color: aqua;
 }
-.imagesection>div>img{
+
+.imagesection>div>img {
     height: 250px;
     width: 250px;
     border-radius: 50%;
@@ -25,22 +29,26 @@ hr{
     box-shadow: 0px 2px 2px 3px rgb(179, 62, 8);
     /* justify-content: space-around; */
     margin: 20px;
-    
+
 
 }
-#cardi{
+
+#cardi {
     display: none;
 }
-.footer{
+
+.footer {
     background-color: rgb(109, 18, 18);
     justify-content: center;
-    
+
 }
-.imagesection{
+
+.imagesection {
     justify-content: space-around;
 
 }
-#successtext{
+
+#successtext {
     display: none;
 }
 
@@ -48,4 +56,3 @@ hr{
     cursor: pointer;
     opacity: 0.8;
 }
-
