--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-    background-image: url('./images/image6.jpeg');
+    background-image: url('/images/background.jpeg');
     background-repeat: none;
     background-size: cover;
 }
